--- a/Index.html
+++ b/Index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>Xalis</title>
+<title>Xilas</title>
 <link href="style.css" rel="stylesheet" type="text/css" media="screen" />
 </head>
 
@@ -16,7 +16,7 @@
     </div><!-- end Header -->
     
     <div id="container">
-    	<img src="images/Xalis_logo.png" />
+    	<img src="images/Xilas_logo.png" />
     </div><!-- end container -->
 </body>
 </html>
